# miniblink2

./: .gitignore  BACKLOG.md  BUILD.md  CLAUDE.md  IMPROVEMENT.md  IMPROVEMENT2.md  PROGRESS.md  PROGRESS_ARCHIVE.md  README.md  RELEASE.md  build.sh
docs/: SERVICE_WORKERS.md  design-blob-service-host.md  interface-surface.md  phase-0-spec.md  phase-1-spec.md  progress-archive-2026-06.md
docs/design/: BACKLOG.md  IMPROVEMENT.md
patches/: 0001-offscreen-widget-compat.patch  0002-suppress-js-dialogs.patch  0003-skip-blob-url-register.patch  0004-blob-url-loader-bypass.patch  0005-export-idb-index-metadata.patch  0006-gpu-in-process-not-testonly.patch  0007-gl-in-process-context-type.patch  0008-webgl-canvas-paint-inline.patch  0009-view-transition-skip-when-non-compositing.patch  0010-webgpu-null-isolation-key-provider.patch  0011-set-mouse-capture-null-input-manager.patch  0012-mb-frame-sink-hook.patch  0013-inprocess-sii-gpu-channel-lost-noop.patch  0014-inprocess-shared-image-manager-thread-safe.patch  0015-screen-info-non-compositing-null-guard.patch  0016-canvas-monitor-graceful-recover.patch  0017-gate-dawn-out-of-mac-gpu-path.patch  0018-webgl-noncomposited-snapshot-refresh.patch  0019-language-detection-tflite-stub.patch  0020-v8-no-wasm-module-compilation-stubs.patch  0021-gate-webrtc-tflite-echo-estimator.patch  0022-seed-pump-nesting-for-midloop-creation.patch  0023-inject-scrollbar-scroll-null-input-manager.patch  0024-inspector-overlay-null-layertree-debugstate.patch  0025-widget-unbuffered-input-null-input-handler-manager.patch  0026-inspector-page-addscript-generate-id-when-browserless.patch  0027-devtools-agent-pause-notify-worker-style-host.patch  0028-fonts-mac-keep-color-emoji-in-substitution-path.patch  0029-fontcache-host-fallback-font-hook.patch  0030-gate-webrtc-stack.patch  0031-v8-jitless-unused-label-arm64.patch  0031-webgpu-swiftshader-skip-angle-luid.patch  0033-external-popup-menu-all-platforms.patch  0034-fontcache-host-fallback-hook-win.patch  0035-d3d-swapchain-gate-graphite-dawn.patch  0036-gpu-init-gate-dawn-context-provider.patch  0037-webnn-ort-create-lock-annotation.patch  0038-webnn-ort-direct-fp16-dep.patch  0039-webnn-ort-tensor-accessor-sequence.patch  0040-gpu-dawn-stubs-win-no-dawn.patch  (+4 more)
samples/: README.md  build.ps1  build.sh  minibrowser_main.mm  sample1_render_to_png.cc  sample2_basic_app.cc  sample5_file_loading.cc  sample6_intro_c_api.c  wkexe_main.mm
samples/assets/: style.css
samples/compat/: mb_window.h
samples/compat/mac/: mb_window.mm
samples/compat/win/: mb_window.cc
samples/sample1_render_to_png/: main.cc
samples/sample2_basic_app/: main.cc
samples/sample3_resizable_app/: main.cc
samples/sample4_javascript/: main.cc
samples/sample5_file_loading/: main.cc
samples/sample5_file_loading/assets/: page.html
samples/sample6_intro_c_api/: main.c
samples/sample8_minibrowser/: assets.h  cdp_bridge.cc  cdp_bridge.h  main.cc
samples/sample9_multi_window/: main.cc
scripts/: build-curl-macos.sh  build-lib.ps1  build-lib.sh  build-samples.sh  package.sh  sizemap.py  trim_icu.py
src/compat/: mb_socket.h  webview_mac.h  webview_win.h
src/miniblink2/: auto.h  automation.h  miniblink2.cc  miniblink2.h  view.h  webview.h  webview_mac.h
src/miniblink_host/: BUILD.gn  miniblink2.exports
src/miniblink_host/blob/: mb_blob_registry.cc  mb_blob_registry.h
src/miniblink_host/capi/: mb_capi.cc  mb_capi.h
src/miniblink_host/devtools/: mb_devtools.cc  mb_devtools.h  mb_devtools_server.cc  mb_devtools_server.h
src/miniblink_host/frame/: mb_broadcast_channel.cc  mb_broadcast_channel.h  mb_cache_storage.cc  mb_cache_storage.h  mb_dom_storage.cc  mb_dom_storage.h  mb_frame_broker.cc  mb_frame_broker.h  mb_frame_client.cc  mb_frame_client.h  mb_frame_origin.cc  mb_frame_origin.h  mb_indexeddb.cc  mb_indexeddb.h  mb_local_frame_host.cc  mb_local_frame_host.h  mb_lock_manager.cc  mb_lock_manager.h  mb_notification_service.cc  mb_notification_service.h  mb_opfs.cc  mb_opfs.h  mb_storage_buckets.cc  mb_storage_buckets.h  mb_view_client.cc  mb_view_client.h  mb_websocket.cc  mb_websocket.h
src/miniblink_host/loader/: mb_retry_policy.h  mb_url_loader.cc  mb_url_loader.h
src/miniblink_host/media/: mb_audio_player.cc  mb_audio_player.h  mb_media_player.cc  mb_media_player.h
src/miniblink_host/platform/: mb_compositor.cc  mb_compositor.h  mb_dawn_stubs.cc  mb_dawn_stubs_win.cc  mb_gpu_thread.cc  mb_gpu_thread.h  mb_platform.cc  mb_platform.h  mb_webgl.cc  mb_webgl.h  mb_webgpu.cc  mb_webgpu.h  mb_webgpu_context.cc  mb_webgpu_context.h
src/miniblink_host/runtime/: mb_runtime.cc  mb_runtime.h  mb_script_watchdog.cc  mb_script_watchdog.h
src/miniblink_host/session/: mb_session.cc  mb_session.h
src/miniblink_host/test/: echo_server.py  mb_compositor_widget_smoke.cc  mb_shot_smoke.sh  mb_smoke.cc  mb_smoke_harness.h  mb_smoke_platform.cc  mb_smoke_r6.cc  mb_smoke_render.cc  mb_test_seams.h
src/miniblink_host/tools/: mb_compositor2_probe.cc  mb_compositor3_probe.cc  mb_compositor4_probe.cc  mb_compositor5_probe.cc  mb_compositor_probe.cc  mb_dawn_probe.cc  mb_demo.cc  mb_gl_probe.cc  mb_gpu_probe.cc  mb_shot.cc  mb_webgpu2_probe.cc  mb_webgpu_probe.cc
src/miniblink_host/view/: mb_damage_tracker.cc  mb_damage_tracker.h  mb_webview.cc  mb_webview.h
src/miniblink_host/widget/: mb_sw_frame_sink.cc  mb_sw_frame_sink.h  mb_widget.cc  mb_widget.h
src/miniblink_host/worker/: mb_dedicated_worker_host.cc  mb_dedicated_worker_host.h  mb_shared_worker.cc  mb_shared_worker.h  mb_worker_fetch_context.cc  mb_worker_fetch_context.h  mb_worker_script.cc  mb_worker_script.h
src/wke/: wke.cc  wke.h  wke_demo.cc  wke_smoke.cc
tools/: build-curl-macos.sh  build-lib.sh
