# miniblink_host — minimal in-process Blink host (the //content replacement).
#
# DRAFT. To iterate: copy this dir to chromium-150.../miniblink_host/, add
#   group("gn_all") deps += [ "//miniblink_host" ]   (or build it directly),
# then `gn gen out/Release && ninja -C out/Release miniblink_host`.
#
# Produces a shared library exposing the extern "C" mb_capi.h ABI. The CMake
# outer shell (wke/mb, port/) links ONLY that.
#
# NOTE: this reaches into renderer-internal blink targets (web_frame_widget_impl,
# url_loader), not just //third_party/blink/public — like blink's own test support.

import("//build/config/ui.gni")

component("miniblink_host") {
  output_name = "miniblink_host"

  # Donor-tree sandbox lives at //third_party/blink/renderer/miniblink_host; this
  # makes `#include "miniblink_host/..."` resolve from there.
  # Vendored WebSocket-enabled libcurl (third_party/curl) FIRST, so <curl/curl.h>
  # and <curl/websockets.h> resolve to it rather than the SDK's WS-less system curl.
  include_dirs = [
    "/Users/yangxin/dennis/chrome/miniblink-modern/third_party/curl/include",
    "//third_party/blink/renderer",
  ]

  sources = [
    "blob/mb_blob_registry.cc",
    "blob/mb_blob_registry.h",
    "capi/mb_capi.cc",
    "capi/mb_capi.h",
    "frame/mb_broadcast_channel.cc",
    "frame/mb_broadcast_channel.h",
    "frame/mb_cache_storage.cc",
    "frame/mb_cache_storage.h",
    "frame/mb_frame_broker.cc",
    "frame/mb_frame_broker.h",
    "frame/mb_dom_storage.cc",
    "frame/mb_dom_storage.h",
    "frame/mb_frame_client.cc",
    "frame/mb_frame_client.h",
    "frame/mb_frame_origin.cc",
    "frame/mb_frame_origin.h",
    "frame/mb_indexeddb.cc",
    "frame/mb_indexeddb.h",
    "frame/mb_local_frame_host.cc",
    "frame/mb_local_frame_host.h",
    "frame/mb_lock_manager.cc",
    "frame/mb_lock_manager.h",
    "frame/mb_notification_service.cc",
    "frame/mb_notification_service.h",
    "frame/mb_opfs.cc",
    "frame/mb_opfs.h",
    "frame/mb_storage_buckets.cc",
    "frame/mb_storage_buckets.h",
    "frame/mb_websocket.cc",
    "frame/mb_websocket.h",
    "frame/mb_view_client.cc",
    "frame/mb_view_client.h",
    "loader/mb_url_loader.cc",
    "loader/mb_url_loader.h",
    "media/mb_audio_player.cc",
    "media/mb_audio_player.h",
    "platform/mb_gpu_thread.cc",
    "platform/mb_gpu_thread.h",
    "platform/mb_compositor.cc",
    "platform/mb_compositor.h",
    "platform/mb_platform.cc",
    "platform/mb_platform.h",
    "platform/mb_webgl.cc",
    "platform/mb_webgl.h",
    "platform/mb_webgpu.cc",
    "platform/mb_webgpu.h",
    "platform/mb_webgpu_context.cc",
    "platform/mb_webgpu_context.h",
    "runtime/mb_runtime.cc",
    "runtime/mb_runtime.h",
    "view/mb_webview.cc",
    "view/mb_webview.h",
    "widget/mb_widget.cc",
    "widget/mb_widget.h",
    "worker/mb_dedicated_worker_host.cc",
    "worker/mb_dedicated_worker_host.h",
    "worker/mb_shared_worker.cc",
    "worker/mb_shared_worker.h",
    "worker/mb_worker_fetch_context.cc",
    "worker/mb_worker_fetch_context.h",
    "worker/mb_worker_script.cc",
    "worker/mb_worker_script.h",
    # wke compatibility layer (staged alongside at ../wke; wraps the mb_capi ABI).
    "../wke/wke.cc",
    "../wke/wke.h",
  ]

  deps = [
    # Blink engine (public + the renderer internals the host subclasses).
    "//third_party/blink/public:blink",
    "//third_party/blink/renderer/controller:controller",
    "//third_party/blink/renderer/core:core",
    "//third_party/blink/renderer/platform:platform",
    # Substrate.
    "//base",
    "//cc",
    # In-process software compositor (platform/mb_compositor.cc): a production viz::Display
    # over a SoftwareOutputSurface + a port of ui::DirectLayerTreeFrameSink, the frame sink
    # blink's WebFrameWidgetImpl returns from AllocateNewLayerTreeFrameSink.
    "//components/viz/common",
    "//components/viz/service",
    "//services/viz/public/mojom",
    "//components/language_detection/content/common:common_blink",  # LanguageDetector broker stub
    "//components/webcrypto",  # WebCrypto impl for Platform::Crypto() (SubtleCrypto)
    "//media",  # media::AudioRendererSink / OutputDeviceStatus for CreateAudioDevice
    # <audio>/<video> container metadata (media/mb_audio_player.cc): FFmpegGlue (in
    # //media) + the FFmpeg headers directly (media/ffmpeg is visibility-restricted to
    # //media). //third_party/ffmpeg's public config adds the libav* include path.
    "//third_party/ffmpeg",
    "//cc/paint",
    # In-process WebGL (platform/mb_webgl.cc): ANGLE/SwiftShader GLES2 over an
    # in-process GPU command buffer. The two in-process targets are de-testonly'd by
    # patches/0006 so this (non-testonly) library can link them.
    "//gpu/command_buffer/client:gles2_implementation",
    "//gpu/command_buffer/common",
    "//gpu/config",
    "//gpu/ipc:gl_in_process_context",
    "//gpu/ipc:gpu_thread_holder",
    # In-process WebGPU (platform/mb_webgpu*.cc): the WebGPU command-buffer client + the
    # dawn native/wire/proc libs for the in-process client+service proc-table coordination.
    "//gpu/command_buffer/client:client",
    "//gpu/command_buffer/client:webgpu",
    "//gpu/command_buffer/client:webgpu_interface",
    "//gpu/command_buffer/service",
    "//gpu/ipc/common",
    "//third_party/dawn/include/dawn:cpp_headers",
    "//third_party/dawn/src/dawn:proc",
    "//third_party/dawn/src/dawn/native",
    "//third_party/dawn/src/dawn/wire",
    "//ui/gl",
    "//ui/gl/init",
    "//gin",
    "//mojo/core/embedder",
    "//mojo/public/cpp/bindings",
    "//mojo/public/cpp/system",
    "//skia",
    "//ui/accessibility:ax_base",
    "//ui/base",
    "//ui/display",  # ScreenInfo/ScreenInfos for the compositing widget init (mb_widget.cc)
    "//ui/gfx",
    "//ui/gfx/codec",
    "//ui/gfx/geometry",
    "//v8",
    # Networking (libcurl factory implements these mojom).
    "//services/network/public/cpp",
    "//services/network/public/mojom",
    "//services/network/public/mojom:mojom_blink",
  ]

  # libcurl for mb_url_loader. TODO(mb): point at the donor's bundled curl or a
  # vendored static lib; for now assume a system/third_party curl target.
  # libs = [ "curl" ]

  configs += [
    "//third_party/blink/renderer:config",
    "//v8:external_startup_data",  # defines V8_USE_EXTERNAL_STARTUP_DATA -> gin snapshot API
  ]

  # Vendored WebSocket-enabled libcurl (tools/build-curl-macos.sh): a dylib so its
  # OpenSSL TLS stays isolated from BoringSSL (two-level namespace). Its absolute
  # install_name lets the linked binaries find it at runtime without an rpath.
  lib_dirs = [ "/Users/yangxin/dennis/chrome/miniblink-modern/third_party/curl/lib" ]
  libs = [ "curl" ]  # -> third_party/curl/lib/libcurl.dylib (HTTP(S) + ws/wss)
}

# Runtime smoke test: exercises mbInitialize() against the real engine.
executable("mb_smoke") {
  sources = [ "test/mb_smoke.cc" ]
  include_dirs = [ "//third_party/blink/renderer" ]
  deps = [ ":miniblink_host" ]
}

# Split themed smoke programs (peeled from the mb_smoke monolith; share
# test/mb_smoke_harness.h). Each runs as its own process.
executable("mb_smoke_platform") {
  sources = [ "test/mb_smoke_platform.cc" ]
  include_dirs = [ "//third_party/blink/renderer" ]
  deps = [ ":miniblink_host" ]
}

executable("mb_smoke_render") {
  sources = [ "test/mb_smoke_render.cc" ]
  include_dirs = [ "//third_party/blink/renderer" ]
  deps = [ ":miniblink_host" ]
}

# mb_compositor_widget_smoke: SOFTWARE COMPOSITOR milestone D2b-2 — the live widget flip
# (InitializeCompositing + the patch-0012 frame-sink hook) driven through the mb_capi ABI.
executable("mb_compositor_widget_smoke") {
  sources = [ "test/mb_compositor_widget_smoke.cc" ]
  include_dirs = [ "//third_party/blink/renderer" ]
  deps = [ ":miniblink_host" ]
}

# mb_shot: headless HTML -> PNG renderer CLI (the deliverable tool).
executable("mb_shot") {
  sources = [ "tools/mb_shot.cc" ]
  include_dirs = [ "//third_party/blink/renderer" ]
  deps = [ ":miniblink_host" ]
}

# mb_demo: a runnable example of the pure-C mb_capi ABI (fill/value/dispatch/
# wait-idle/scrape/request-log/element-screenshot) that doubles as documentation.
executable("mb_demo") {
  sources = [ "tools/mb_demo.cc" ]
  include_dirs = [ "//third_party/blink/renderer" ]
  deps = [ ":miniblink_host" ]
}

# wke_smoke: exercises the wke compatibility slice end to end (its own process).
executable("wke_smoke") {
  sources = [ "../wke/wke_smoke.cc" ]
  include_dirs = [ "//third_party/blink/renderer" ]
  deps = [ ":miniblink_host" ]
}

# wke_demo: a runnable example of the automation API (fill/select/click/wait/
# scrape/screenshot) that doubles as documentation.
executable("wke_demo") {
  sources = [ "../wke/wke_demo.cc" ]
  include_dirs = [ "//third_party/blink/renderer" ]
  deps = [ ":miniblink_host" ]
}

# mb_gl_probe: WebGL bring-up milestone A — initializes ANGLE/SwiftShader GL
# IN-PROCESS and makes an offscreen context current. Blink-free: links only the GL
# stack, so a green run isolates "the in-process GL foundation works" ahead of the
# (heavier) in-process command buffer + blink WebGL provider.
executable("mb_gl_probe") {
  sources = [ "tools/mb_gl_probe.cc" ]
  deps = [
    "//base",
    "//ui/gfx/geometry",
    "//ui/gl",
    "//ui/gl/init",
  ]
}

# mb_gpu_probe: WebGL bring-up milestone B — an in-process GPU command buffer over the
# milestone-A GL, driven through a real gpu::gles2::GLES2Interface (what blink's WebGL
# provider consumes). Blink-free.
executable("mb_gpu_probe") {
  testonly = true  # //gpu/ipc:gl_in_process_context + :gpu_thread_holder are testonly
  sources = [ "tools/mb_gpu_probe.cc" ]
  deps = [
    "//base",
    "//gpu/command_buffer/client:gles2_implementation",
    "//gpu/command_buffer/client:gles2_interface",
    "//gpu/command_buffer/common",
    "//gpu/config",
    "//gpu/ipc:gl_in_process_context",
    "//gpu/ipc:gpu_thread_holder",
    "//ui/gl",
    "//ui/gl/init",
  ]
}

# mb_dawn_probe: WebGPU bring-up milestone A — an in-process Dawn native instance that
# enumerates adapters and creates a real WebGPU device (SwiftShader fallback preferred).
# Blink-free, so a green run isolates "the in-process Dawn foundation works" ahead of the
# heavier blink WebGPU provider wiring. Mirrors mb_gl_probe's role for the GL stack.
executable("mb_dawn_probe") {
  sources = [ "tools/mb_dawn_probe.cc" ]
  deps = [
    "//base",
    "//third_party/dawn/src/dawn/native",
  ]
}

# mb_webgpu_probe: WebGPU bring-up milestone B — an in-process WebGPU command buffer over
# the milestone-A Dawn device, driven through gpu::webgpu::WebGPUInterface + the dawn-wire
# client (what blink's WebGPU provider consumes). Requests an adapter + device through the
# wire. Blink-free; testonly because WebGPUInProcessContext lives in //gpu:test_support.
executable("mb_webgpu_probe") {
  testonly = true
  sources = [ "tools/mb_webgpu_probe.cc" ]
  deps = [
    "//base",
    "//base/test:test_support",
    "//components/viz/test:test_support",
    "//gpu:test_support",
    "//gpu/command_buffer/client:webgpu",
    "//gpu/command_buffer/client:webgpu_interface",
    "//gpu/webgpu:common",
    "//mojo/core/embedder",
    "//third_party/dawn/include/dawn:cpp_headers",
    "//third_party/dawn/src/dawn:proc",
    "//third_party/dawn/src/dawn/wire",
    "//ui/gl",
    "//ui/gl/init",
  ]
}

# mb_webgpu2_probe: WebGPU bring-up milestone C1 — prove the PRODUCTION (non-testonly)
# in-process WebGPU context (platform/mb_webgpu_context, our copy of WebGPUInProcessContext
# using a real task runner) resolves requestAdapter/requestDevice. Links ONLY non-testonly
# deps (the in-process GPU command-buffer targets are non-testonly via patches/0006), so a
# green run means this path can be wired into the host library + MbPlatform (milestone C2).
executable("mb_webgpu2_probe") {
  sources = [
    "platform/mb_webgpu_context.cc",
    "platform/mb_webgpu_context.h",
    "tools/mb_webgpu2_probe.cc",
  ]
  deps = [
    "//base",
    "//gpu/command_buffer/client:client",
    "//gpu/command_buffer/client:webgpu",
    "//gpu/command_buffer/client:webgpu_interface",
    "//gpu/command_buffer/common",
    "//gpu/command_buffer/service",
    "//gpu/config",
    "//gpu/ipc:gl_in_process_context",
    "//gpu/ipc:gpu_thread_holder",
    "//gpu/ipc/common",
    "//third_party/dawn/include/dawn:cpp_headers",
    "//third_party/dawn/src/dawn:proc",
    "//third_party/dawn/src/dawn/native",
    "//third_party/dawn/src/dawn/wire",
    "//ui/gl",
    "//ui/gl/init",
    "//url",
  ]
}

# mb_compositor_probe: SOFTWARE COMPOSITOR bring-up milestone A — an in-process viz
# SoftwareRenderer draws a CompositorRenderPass (solid-color quad) to a bitmap and reads it
# back. Blink-free; proves the software render-pass->pixels path the LayerTreeFrameSink wraps.
# testonly: cc/viz test_support (PixelTestOutputSurface, TestGpuServiceHolder, render-pass
# helpers).
executable("mb_compositor_probe") {
  testonly = true
  sources = [ "tools/mb_compositor_probe.cc" ]
  deps = [
    "//base",
    "//base/test:test_support",
    "//cc:test_support",
    "//components/viz/common",
    "//components/viz/service",
    "//components/viz/test:test_support",
    "//mojo/core/embedder",
    "//skia",
    "//ui/gfx",
    "//ui/gfx/geometry",
    "//ui/gl",
    "//ui/gl/init",
  ]
}

# mb_compositor2_probe: SOFTWARE COMPOSITOR bring-up milestone B — a full in-process
# viz::Display (FrameSinkManager + CompositorFrameSinkSupport + scheduler + software output
# surface) composites a SUBMITTED CompositorFrame to a bitmap. Blink-free; the surface-
# aggregation + display path between a LayerTreeFrameSink and pixels. testonly.
executable("mb_compositor2_probe") {
  testonly = true
  sources = [ "tools/mb_compositor2_probe.cc" ]
  deps = [
    "//base",
    "//base/test:test_support",
    "//components/viz/common",
    "//components/viz/service",
    "//components/viz/test:test_support",
    "//mojo/core/embedder",
    "//skia",
    "//ui/gfx",
    "//ui/gfx/geometry",
    "//ui/gl",
    "//ui/gl/init",
  ]
}

# mb_compositor3_probe: SOFTWARE COMPOSITOR bring-up milestone C — drive the REAL in-process
# frame sink (viz::DirectLayerTreeFrameSink) over the milestone-B Display with a stub
# cc::LayerTreeFrameSinkClient; submit a frame THROUGH the sink and read back the bitmap.
# Proves cc's frame-sink contract -> Display -> pixels (the artifact blink returns). testonly.
executable("mb_compositor3_probe") {
  testonly = true
  sources = [ "tools/mb_compositor3_probe.cc" ]
  deps = [
    "//base",
    "//base/test:test_support",
    "//cc",
    "//components/viz/common",
    "//components/viz/service",
    "//components/viz/test:test_support",
    "//mojo/core/embedder",
    "//skia",
    "//ui/compositor:test_support",
    "//ui/gfx",
    "//ui/gfx/geometry",
    "//ui/gl",
    "//ui/gl/init",
  ]
}

# mb_compositor4_probe: SOFTWARE COMPOSITOR bring-up milestone D1 — same path as C but the
# viz::Display is assembled from PRODUCTION (non-test) gpu/viz components: standalone
# gpu::SyncPointManager/Scheduler/SharedImageManager + viz::SoftwareOutputSurface (no
# TestGpuServiceHolder / FakeSoftwareOutputSurface). De-risks the host-library Display for D2.
executable("mb_compositor4_probe") {
  testonly = true
  sources = [ "tools/mb_compositor4_probe.cc" ]
  deps = [
    "//base",
    "//base/test:test_support",
    "//cc",
    "//components/viz/common",
    "//components/viz/service",
    "//components/viz/test:test_support",
    "//gpu/command_buffer/service",
    "//mojo/core/embedder",
    "//skia",
    "//ui/compositor:test_support",
    "//ui/gfx",
    "//ui/gfx/geometry",
    "//ui/gl",
    "//ui/gl/init",
  ]
}

# mb_compositor5_probe: SOFTWARE COMPOSITOR bring-up milestone D2a — drive the host-library
# component mb::SoftwareCompositor (platform/mb_compositor.{h,cc}) end to end. Compiles the
# component .cc into the probe (it also ships in miniblink_host) + a stub frame-sink client;
# proves the real component composites a frame to a bitmap. testonly.
executable("mb_compositor5_probe") {
  testonly = true
  sources = [
    "platform/mb_compositor.cc",
    "platform/mb_compositor.h",
    "platform/mb_gpu_thread.cc",
    "platform/mb_gpu_thread.h",
    "tools/mb_compositor5_probe.cc",
  ]
  include_dirs = [ "//third_party/blink/renderer" ]
  deps = [
    "//base",
    "//base/test:test_support",
    "//cc",
    "//components/viz/common",
    "//components/viz/service",
    "//components/viz/test:test_support",
    "//gpu/command_buffer/service",
    "//gpu/ipc:gl_in_process_context",
    "//gpu/ipc:gpu_thread_holder",
    "//mojo/core/embedder",
    "//services/viz/public/mojom",
    "//skia",
    "//ui/gfx",
    "//ui/gfx/geometry",
    "//ui/gl",
    "//ui/gl/init",
  ]
}
